Task #162632 : Solve the issue of the Career modal is Behind the header (Navigation) (#109)

--- a/src/components/list-view/list-view.scss
+++ b/src/components/list-view/list-view.scss
@@ -23,4 +23,7 @@
         position: relative;
         text-decoration: none;
     }
+    .read-more {
+        @include anchor-blue-style;
+    }
 }
